# mydashtwo

./: MANIFEST.in  Readme.md  generatecss.bat  pyproject.toml  run.py  tailwind.config.js
mydashtwo/: app.py
mydashtwo/config/: main.py
mydashtwo/pages/: nspage1.py  nspage2.py  nsstart.py
mydashtwo/project/: start.py
